# digit-recognition

./: LICENSE  README.md  app.yaml  main.py  pyproject.toml  requirements.txt
notebooks/: digit-recognition.ipynb
static/: script.js  style.css
templates/: index.html
